tests/ui/invalid/invalid-debugger-visualizer-option.stderr
error: couldn't read $DIR/../foo.random: $FILE_NOT_FOUND_MSG (os error $FILE_NOT_FOUND_CODE)
  --> $DIR/invalid-debugger-visualizer-option.rs:5:24
   |
LL | #![debugger_visualizer(natvis_file = "../foo.random")]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0539]: malformed `debugger_visualizer` attribute input
  --> $DIR/invalid-debugger-visualizer-option.rs:4:1
   |
LL | #![debugger_visualizer(random_file = "../foo.random")]
   | ^^^^^^^^^^^^^^^^^^^^^^^-----------^^^^^^^^^^^^^^^^^^^^
   | |                      |
   | |                      valid arguments are `natvis_file` or `gdb_script_file`
   | help: must be of the form: `#![debugger_visualizer(natvis_file = "...", gdb_script_file = "...")]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/debugger.html#the-debugger_visualizer-attribute>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
